--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,6 @@ jobs:
         run: |
           pip install -e .
           pip install pytest
-          pip install streamlit, altair
+          pip install streamlit altair
 
       - run: pytest
